# career-profile

bomberman/: .gitignore  Readme.md
bomberman/src/: bomber.css  bomber.js  gamefield.css  index.html
bomberman/src/modules/: bombardment.js  countdown.js  generate.js  movement.js
bomberman/src/modules/models/: Bomb.js  Box.js  Enemy.js  GameField.js  Player.js  index.js
profilepage/: .gitignore  README.md  package.json
profilepage/public/: index.html
profilepage/src/: App.css  App.js
profilepage/src/assets/: Erkki_Tikk_ico.ico:Zone.Identifier
profilepage/src/components/: Barchart.js  Barchart.module.css  Cv.js  Cv.module.css  Home.js  Home.module.css  Linechart.js  Linechart.module.css  Navbar.js  Navbar.module.css  Profile.js  Profile.module.css  Projects.js  Projects.module.css
real-time-forum/: .gitignore
real-time-forum/backend/: go.mod  go.sum  main.go
real-time-forum/backend/db/: db.go  dummy_data.go
real-time-forum/backend/pkg/config/: config.go
real-time-forum/backend/pkg/helper/: helper.go
real-time-forum/backend/pkg/logger/: logger.go
real-time-forum/backend/pkg/middleware/: authentication.go
real-time-forum/backend/pkg/model/: model.go
real-time-forum/backend/pkg/websockets/: client.go  message.go  pool.go  websockets.go
real-time-forum/frontend/: package.json
real-time-forum/frontend/src/: App.js  index.js  websocket.js
road-intersection/: Cargo.toml
road-intersection/src/: car.rs  main.rs  road.rs
spacenode/backend/: nodemon.json  package.json
spacenode/backend/src/: index.ts
(+30 files in other folders)
