[package]
name = "road_intersection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# export DISPLAY=$(grep -m 1 nameserver /etc/resolv.conf | awk '{print $2}'):0

[dependencies]
speedy2d = "1.7.0"
simple_logger = "2.3.0"
x11 = "2.20.0"
xdg = "2.4.1"
settimeout = "0.1.2"
futures = "0.3.24"
rand = "0.8.5"